# rsim-rv32i

./: Cargo.toml  README.md  Trunk.toml  index.html  rust-toolchain.toml
.cargo/: config.toml
assets/: sw.js
figures/: .$core.drawio.bkp
src/: lib.rs  main.rs
src/backend/: core.rs  mod.rs
src/backend/component/: alu.rs  cmp.rs  control.rs  ir.rs  mar.rs  mem_addr_mux.rs  mem_ctl.rs  mod.rs  mrdr.rs  mwdr.rs  pc.rs  regfile.rs
src/backend/util/: blackhole.rs  byte.rs  event.rs  helper.rs  mod.rs  types.rs
src/frontend/: core_app.rs  core_gui_wrapper.rs  mod.rs
src/frontend/tab/: about.rs  console.rs  control.rs  datapath.rs  memory.rs  mod.rs  register.rs  setting.rs
src/frontend/util/: datapath_component.rs  datapath_net.rs  mod.rs  vga.rs
tests/: coremark.rs  dump.sh  echo.s  echo.s.disas  echo.s.elf  keyboard_mmio.s  keyboard_mmio.s.disas  keyboard_mmio.s.elf  link.ld  vga.c  vga.c.disas  vga.c.elf  vga.s  vga.s.disas  vga.s.elf  vga_keyboard.s  vga_keyboard.s.disas  vga_keyboard.s.elf  wasd.c  wasd.c.disas  wasd.c.elf
