[package]
name = "rsim_rv32i"
version = "1.0.0-beta.1"
edition = "2021"

[dependencies]
rsim_core = { git = "ssh://git@github.com:22/averageFOSSenjoyer/rsim-core.git" }
rsim_macro = { git = "ssh://git@github.com:22/averageFOSSenjoyer/rsim-macro.git" }
crossbeam-channel = "=0.5.14"
strum = {version = "=0.25.0", features = ["derive"] }
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
] }
egui_extras = "0.30.0"
egui_file = "0.20.0"
log = "0.4"
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
rand = "0.8.5"

[dev-dependencies]
rand = "0.8.5"

[lints.clippy]
too_many_arguments = "allow"