[package]
name = "rsim_rv32i"
version = "1.0.0-beta.2"
edition = "2021"

[dependencies]
rsim_core = { git = "ssh://git@github.com:22/averageFOSSenjoyer/rsim-core.git" }
rsim_macro = { git = "ssh://git@github.com:22/averageFOSSenjoyer/rsim-macro.git" }
crossbeam-channel = "=0.5.14"
strum = {version = "=0.25.0", features = ["derive"] }
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
] }
egui_extras = "0.30.0"
wasm_thread = "0.3.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.22"
rfd = "0.13"
futures = "0.3.31"
web-time = "1.1.0"
elf = "0.7.4"

[dev-dependencies]
rand = "0.8.5"

[lints.clippy]
too_many_arguments = "allow"

# see https://github.com/trunk-rs/trunk/tree/main/examples/wasm_threads#notes-on-applying-this
[profile.dev.package."*"]
opt-level = 2